[package]
name = "yak-swap-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
console = "0.15.2"
ethers = { version = "1.0.0", features = ["rustls"] }
num-derive = "0.3"
num-traits = "0.2"
eth-keystore= "0.5.0"
pickledb = "0.5.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
spinners = "4.1.0"
settimeout = "0.1"
ethers-derive-eip712 = "1.0.2"
